# AutoDaveSave

./: AudoDaveSave.cpp  AutoDaveSave.slnx  AutoDaveSave.vcxproj  AutoDaveSave.vcxproj.filters  CMakeLists.txt  Exports.def  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  codeql.yml  synopsys-io.yml
